# Library_for_twofactor_authentication

./: CMakeLists.txt  README.md  SerialQt.h  functions_for_pam.h  gost_3410_2012.h  gost_3412_2015_calc.h
